--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,5 @@
 RewriteEngine on
+RewriteCond %{REQUEST_URI} !^/static/.*$
 RewriteRule ^([^/\.]+)?$ index.php?x=/$1 [L]
 RewriteRule ^([^/\.]+)/([^/]+)?$ index.php?x=/$1/$2 [L]
 RewriteRule ^([^/\.]+)/([^/]+)/([^/]+)?$ index.php?x=/$1/$2/$3 [L]
